# ProcessDiscovery

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  app.py  definitions.py  docker-compose.yml  environment.yml  experiments.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_docs.txt  sitemap.xml  test.py
.github/workflows/: check_coverage.yml  check_docs.yml  deploy.yml  main.yml  publish_docs.yml
backend/files/: orca-ascii.txt
backend/src/: dataclasses.py
backend/src/data/: extract.py
backend/src/dataclasses/: attributes.py  charts.py  dataclasses.py  filters.py  requests.py
backend/src/flask/: providers.py
backend/src/kpi/: kpi.py
backend/src/process_mining/: dfg.py  (+7 more)
dataclasses/: index.html
docs/: dataclasses.md  event_log_extraction.md
docs/process_mining/: dejure.md  dfg.md  distribution.md  event_log.md  kpi.md  variants.md
event_log_extraction/: index.html
frontend/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  BaseChart.vue  git-guide.md  main.ts  registerServiceWorker.ts  theme.js  types.ts  util.js  util.ts  visual-tour.ts
process_mining/dejure/: index.html
process_mining/dfg/: index.html
process_mining/distribution/: index.html
process_mining/event_log/: index.html
process_mining/kpi/: index.html
process_mining/variants/: index.html
search/: search_index.json
tests/: conftest.py  dataclasses_test.py  disaggregation_attribute_test.py  event_log_extraction_test.py  filter_test.py  kpi_test.py  patient_attributes_test.py  process_mining_test.py  test_sample.csv
(+35 files in other folders)
