[tool.poetry]
name = "orca"
version = "0.1.0"
description = "Organ Retrieval and (Information) Collection Analytics"
authors = ["Hannes Drescher <hannes.drescher@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
marshmallow = "^3.20.1"
flask-marshmallow = "^0.15.0"
pm4py = "^2.7.8.4"
waitress = "^2.1.2"
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
