[tool.poetry]
name = "orca"
version = "0.1.0"
description = "Organ Retrieval and (Information) Collection Analytics"
authors = ["Hannes Drescher <hannes.drescher@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
marshmallow = "^3.20.1"
flask-marshmallow = "^0.15.0"
pm4py = "^2.7.8.4"
waitress = "^2.1.2"
termcolor = "^2.4.0"
flask-caching = "^2.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov=backend/src --cov-report xml"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.5.2"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
